@@ -1,3 +1,13 @@
+From 683604f (closure-adv):
+==========================
+
+In prisim/bispectrum_phase.py,
+
+(*) In member function smooth_in_tbins() of class ClosurePhase, update
+handling of the case when the specified LST bin size is smaller than
+the LST resolution in the data, namely, do no binning and pass the
+existing bin size, and other keys
+
 From f11e09b (closure-adv):
 ==========================
 
